Fix collection API
