# back-end/routes/v1/rest-character/aggregator/mount_aggregator.go
@@ -1,0 +1,80 @@
+package aggregator
+
+import (
+	"slices"
+
+	battlenetEntities "wowcollector.io/entities"
+	"wowcollector.io/entities/documents"
+	"wowcollector.io/entities/response"
+	mountrepository "wowcollector.io/repository/repositories/mount-repository"
+)
+
+func GetMountsAggregation(character battlenetEntities.BattleNetCharacter, collection battlenetEntities.BattleNetCharacterMountCollection, view documents.MountViewDocument) []response.MountCollectionCategory {
+	collectedIds := getCollectedIds(collection)
+	mounts, _ := mountrepository.GetRepository().GetMounts()
+	filteredMounts := getFilteredMounts(character, mounts, collectedIds)
+
+	return getMountCategories(view, filteredMounts, collectedIds)
+}
+
+func getMountCategories(view documents.MountViewDocument, mounts map[int]*documents.MountDocument, collectedIds []int) []response.MountCollectionCategory {
+	var result []response.MountCollectionCategory
+	for _, element := range view.Categories {
+		result = append(result, getMountCategory(element, mounts, collectedIds))
+	}
+	return result
+}
+
+func getMountCategory(category documents.MountViewCategory, mounts map[int]*documents.MountDocument, collectedIds []int) response.MountCollectionCategory {
+	var subCategories []response.MountCollectionCategory
+	for _, category := range category.Categories {
+		subCategories = append(subCategories, getMountCategory(category, mounts, collectedIds))
+	}
+
+	var mountsResult []response.MountCollectionMount
+	for _, categoryMount := range category.Mounts {
+		mount := mounts[categoryMount.Id]
+		if mount == nil {
+			continue
+		}
+		mountsResult = append(mountsResult, response.MountCollectionMount{
+			Name:            mount.Name,
+			Description:     mount.Description,
+			Id:              mount.Id,
+			IsCollected:     slices.Contains(collectedIds, categoryMount.Id),
+			CreatureDisplay: mount.CreatureDisplay,
+			Icon:            mount.Icon,
+		})
+	}
+
+	return response.MountCollectionCategory{
+		Name:       category.Name,
+		Order:      category.Order,
+		Categories: subCategories,
+		Mounts:     mountsResult,
+	}
+}
+
+func getCollectedIds(collection battlenetEntities.BattleNetCharacterMountCollection) []int {
+	var result []int
+	for _, element := range collection.Mounts {
+		result = append(result, element.Mount.Id)
+	}
+	return result
+}
+
+func getFilteredMounts(character battlenetEntities.BattleNetCharacter, mounts []*documents.MountDocument, collectedIds []int) map[int]*documents.MountDocument {
+	var result = make(map[int]*documents.MountDocument)
+
+	for _, element := range mounts {
+		if element.Faction != character.GetFaction() {
+			continue
+		}
+
+		if element.IsUnobtainable && !slices.Contains(collectedIds, element.Id) {
+			continue
+		}
+		result[element.Id] = element
+	}
+	return result
+}
